--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,4 +16,8 @@
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ 'atom.xml' | relative_url }}">
 
   {% seo title=false %}
+  
+  {% if page.mathjax %}
+    {% include mathjax.html %}
+  {% endif %
 </head>
