--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
 
   {% seo title=false %}
   
-  {% if page.mathjax %}
+  {% if page.mathjax or page.title == "Home" %}
     {% include mathjax.html %}
   {% endif %}
 </head>
